# tx-2026-election-results

./: .gitignore  README.md  REDISTRICTING_ANALYSIS_REPORT.md  analyze_modeling_criteria.py  check_ml_status.sh  district_map_changes_report.py  main.py  pyproject.toml
.github/: AGENTS.md
data/early_voting/: STATEWIDE.2025 NOVEMBER 4TH CONSTITUTIONAL AMENDMENT.EarlyVoting.10_25_2025.csv  STATEWIDE.2025 NOVEMBER 4TH CONSTITUTIONAL AMENDMENT.EarlyVoting.10_26_2025.csv
data/exports/: party_composition_new_districts.csv  party_composition_old_districts.csv  party_gains_losses_by_district.csv
data/exports/csv/: 2022_vs_2026_advantage_comparison_summary.csv  (+35 more)
notebooks/: district_map_changes_report.py
scripts/: compare_known_vs_modeled_voters.py  migrate_to_db.py  migrate_to_db_test.py
src/: __init__.py  config.py
src/api/: main.py
src/database/: __init__.py  connection_factory.py  init.py
src/models/: __init__.py  early_voting.py  turnout.py  voter.py
src/notebooks/: redistricting_analysis_report_nb.py
src/scripts/: analyze_competitiveness_with_modeled.py  analyze_modeling_criteria.py  calculate_competitiveness_comparison.py  compare_2022_vs_2026_advantage.py  compare_known_vs_modeled_voters.py  fix_missing_district_assignments.py  fix_missing_districts_final.py  generate_gains_losses_breakdown.py  generate_redistricting_report.py  migrate_to_db.py  migrate_to_db_test.py  model_party_affiliation.py  process_voterfile.py  redistricting_analysis_report.py  run_ml_steps.py  run_new_steps.py  test_api.py
src/tx_election_results/: __init__.py  config.py
(+139 files in other folders)
