[project]
name = "tx-2026-election-results"
version = "0.1.0"
description = "Texas 2026 Election Results analysis pipeline"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "polars>=1.35.1",
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "folium>=0.15.0",
    "shapely>=2.0.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "geopy>=2.4.0",
    "tqdm>=4.66.0",
    "sqlmodel>=0.0.14",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "python-dateutil>=2.8.2",
    "greenlet>=3.0.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.3.0",
    "pyzmq>=27.1.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src"]
